[gd_scene load_steps=7 format=1]

[ext_resource path="res://themes/text30.tres" type="Theme" id=1]
[ext_resource path="res://scripts/game/source/2/casino/diceRiddle.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/game/white.jpg" type="Texture" id=4]
[ext_resource path="res://assets/game/source/2/casino/screen.png" type="Texture" id=5]
[ext_resource path="res://assets/game/source/2/casino/needle.png" type="Texture" id=6]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="riddleOverlay" parent="." instance=ExtResource( 3 )]

[node name="bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 4 )
modulate = Color( 0.0156863, 0.266667, 0.0235294, 1 )
expand = true
stretch_mode = 0

[node name="throwDice" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 886.0
margin/top = 629.0
margin/right = 1090.0
margin/bottom = 666.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Throw the dice"
flat = false

[node name="infometer" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 986.0
margin/top = 463.0
margin/right = 986.0
margin/bottom = 463.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="infometer"]

rect/min_size = Vector2( 800, 360 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -400.0
margin/top = -210.0
margin/right = 400.0
margin/bottom = 150.0

[node name="infometerYes" type="Control" parent="infometer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -200.0
margin/top = 0.0
margin/right = -200.0
margin/bottom = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="yesLabel" type="Label" parent="infometer/infometerYes"]

rect/min_size = Vector2( 240, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -120.0
margin/top = -200.0
margin/right = 120.0
margin/bottom = -169.0
text = "Yes"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="infometer" type="Sprite" parent="infometer/infometerYes"]

transform/pos = Vector2( 0, 97 )
texture = ExtResource( 5 )
offset = Vector2( 0, -60 )
__meta__ = {
"_edit_group_": true
}

[node name="needle" type="Sprite" parent="infometer/infometerYes/infometer"]

transform/rot = -90.0
texture = ExtResource( 6 )
offset = Vector2( 0, -60 )

[node name="infometerName" type="Label" parent="infometer/infometerYes/infometer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -125.0
margin/top = 15.0
margin/right = 135.0
margin/bottom = 46.0
text = "Information-o'meter"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="zero" type="Label" parent="infometer/infometerYes/infometer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -170.0
margin/top = -10.0
margin/right = -130.0
margin/bottom = 21.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="infinity" type="Label" parent="infometer/infometerYes/infometer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 135.0
margin/top = -5.0
margin/right = 175.0
margin/bottom = 26.0
text = "∞"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yesBar" type="ProgressBar" parent="infometer/infometerYes"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -125.0
margin/top = -150.0
margin/right = 125.0
margin/bottom = -119.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="probameterName" type="Label" parent="infometer/infometerYes/yesBar"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 250.0
margin/bottom = 71.0
text = "Probameter"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="zero" type="Label" parent="infometer/infometerYes/yesBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -25.0
margin/top = 0.0
margin/right = 15.0
margin/bottom = 31.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="one" type="Label" parent="infometer/infometerYes/yesBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 0.0
margin/right = 270.0
margin/bottom = 31.0
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="infometerNo" type="Control" parent="infometer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="noLabel" type="Label" parent="infometer/infometerNo"]

rect/min_size = Vector2( 240, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -120.0
margin/top = -200.0
margin/right = 120.0
margin/bottom = -169.0
text = "No"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="infometer" type="Sprite" parent="infometer/infometerNo"]

transform/pos = Vector2( 0, 97 )
texture = ExtResource( 5 )
offset = Vector2( 0, -60 )
__meta__ = {
"_edit_group_": true
}

[node name="needle" type="Sprite" parent="infometer/infometerNo/infometer"]

transform/rot = 90.0
texture = ExtResource( 6 )
offset = Vector2( 0, -60 )

[node name="infometerName" type="Label" parent="infometer/infometerNo/infometer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -125.0
margin/top = 15.0
margin/right = 128.0
margin/bottom = 46.0
text = "Information-o'meter"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="zero" type="Label" parent="infometer/infometerNo/infometer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -170.0
margin/top = -5.0
margin/right = -130.0
margin/bottom = 26.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="infometer/infometerNo/infometer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 135.0
margin/top = -5.0
margin/right = 175.0
margin/bottom = 26.0
text = "∞"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="noBar" type="ProgressBar" parent="infometer/infometerNo"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -125.0
margin/top = -150.0
margin/right = 125.0
margin/bottom = -119.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="probameterName" type="Label" parent="infometer/infometerNo/noBar"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 40.0
margin/bottom = 71.0
text = "Probameter"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="zero" type="Label" parent="infometer/infometerNo/noBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -25.0
margin/top = 0.0
margin/right = 15.0
margin/bottom = 31.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="one" type="Label" parent="infometer/infometerNo/noBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 0.0
margin/right = 270.0
margin/bottom = 31.0
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="answerButtonsContainer" type="VBoxContainer" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 628.0
margin/top = 697.0
margin/right = 569.0
margin/bottom = 206.0
alignment = 0

[node name="answerButtonsContainer" type="HBoxContainer" parent="answerButtonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 723.0
margin/bottom = 136.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="answerButtonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 140.0
margin/right = 723.0
margin/bottom = 177.0
alignment = 0

[node name="resetButton" type="Button" parent="answerButtonsContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 359.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset"
flat = false

[node name="askButton" type="Button" parent="answerButtonsContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 363.0
margin/top = 0.0
margin/right = 723.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ask"
flat = false

[node name="riddleInstructions" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 921.0
margin/right = 1876.0
margin/bottom = 1036.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="pressed" from="answerButtonsContainer/HBoxContainer/resetButton" to="." method="_on_resetButton_pressed"]

[connection signal="pressed" from="answerButtonsContainer/HBoxContainer/askButton" to="." method="_on_askButton_pressed"]


